--- a/404.html
+++ b/404.html
@@ -55,9 +55,8 @@ permalink: /404.html
 		<h3>Pagina non trovata</h3>
 		<p>The site configured at this address does not contain the requested file. <br/> Make sure that the filename case matches the URL.</p>
 
-		<h3>Ritorna a Spidermake <a href="https://spidermake.com"><span class="text-brown"> Home Page</span></a></h3>
-		<br/>
-		<p>SpiderMake Status &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="mailto:hi@spidermake.com"><span class="text-brown"> hi@spidermake.com</span></a></p>
+		<h3>Ritorna a <a href="https://spidermake.com"><span class="text-brown"> Spidermake.com</span></a></h3>
+    
       </div>
     </div>
   </body>
