Sitemap set to false

--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 ---
 permalink: /404.html
+sitemap: false
 ---
 <!DOCTYPE html>
 <html lang="it">
@@ -56,7 +57,7 @@ permalink: /404.html
 		<p>The site configured at this address does not contain the requested file. <br/> Make sure that the filename case matches the URL.</p>
 
 		<h3>Ritorna a <a href="https://spidermake.com"><span class="text-brown"> Spidermake.com</span></a></h3>
-    
+
       </div>
     </div>
   </body>
