Modifica home css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 ---
 layout: home
 ---
+  <div id="bdiv">
+    <div id="cdiv">
+      <h1>SPIDERMAKE</h1>
+      <h3>AGENZIA WEB A UDINE</h3>
+      <p>Realizzare siti internet. Creazione siti Web Aziendali a Udine. Sviluppo Siti Responsive. La tua Web Agency a Udine!</p>
+      <p><a href="/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/" title="about Web Agency Udine | Chi Siamo">
+        Questa &egrave; la nostra missione!</a></p>
+    </div>
+  </div>
 
-    <h1>SPIDERMAKE</h1>
-    <p>Disegnare e realizzare siti internet. Ottimizzare e promuovere siti web, a Trieste, a Udine e in Friuli.<br/>
+  <div id="footer-home">
 
-      <span class="text-brown">Questa &egrave; la nostra missione!</span></p>
-<br/>
+    <div id="descrizione-home">
+
+    <h2>SERVIZI WEB</h2>
+    <p>Progettazione Sito E-Commerce, Restyling Sito Web. Agenzia Web a Udine,
+      <a href="/realizzazione-siti-internet-a-udine/" title="realizzazione siti internet a Udine">Sito web al migliore prezzo di mercato</a></p>
+
+    <h2>WEB MARKETING</h2>
+    <p>Campagne AdWords, Facebook. Web Marketing. SEO.
+      <a href="/web agency udine è consulente seo. web marketing per siti internet/">Porta il tuo sito in prima pagina su Google!</a></p>
+    </div>
+    <br/><br/>
+      {% include footer.html %}
+  </div>
