aggiustati broken links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: home
       <h1>SPIDERMAKE</h1>
       <h3>AGENZIA WEB A UDINE</h3>
       <p>Realizzare siti internet. Creazione siti Web Aziendali a Udine. Sviluppo Siti Responsive. La tua Web Agency a Udine!</p>
-      <p><a href="/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/" title="about Web Agency Udine | Chi Siamo">
+      <p><a href="/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/" title="About Web Agency Udine: Chi Siamo">
         Questa &egrave; la nostra missione!</a></p>
     </div>
   </div>
@@ -17,11 +17,11 @@ layout: home
 
     <h2>SERVIZI WEB</h2>
     <p>Progettazione Sito E-Commerce, Restyling Sito Web. Agenzia Web a Udine,
-      <a href="/realizzazione-siti-internet-a-udine/" title="realizzazione siti internet a Udine">Sito web al migliore prezzo di mercato</a></p>
+      <a href="/servizi/realizzazione-siti-internet-a-udine/" title="Realizzazione siti internet a Udine. Creazione siti web per le aziende di Udine.">Sito web al migliore prezzo di mercato</a></p>
 
     <h2>WEB MARKETING</h2>
     <p>Campagne AdWords, Facebook. Web Marketing. SEO.
-      <a href="/web agency udine è consulente seo. web marketing per siti internet/">Porta il tuo sito in prima pagina su Google!</a></p>
+      <a href="/servizi/posizionamento-sui-motori-di-ricerca-consulente-seo-a-udine/" title="web agency udine, consulenze seo. web marketing per siti internet.">Porta il tuo sito in prima pagina su Google!</a></p>
     </div>
     <br/><br/>
       {% include footer.html %}
