aggiunta di pagine

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: home
     <div id="cdiv">
       <h1>SPIDERMAKE</h1>
       <h3>AGENZIA WEB A UDINE</h3>
-      <p>Realizzare siti internet. Creazione siti Web Aziendali a Udine. Sviluppo Siti Responsive. La tua Web Agency a Udine!</p>
+      <p>Realizza siti internet. Crea siti Web Aziendali. Sviluppa Siti Responsive.</p>
       <p><a href="/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/" title="About Web Agency Udine: Chi Siamo">
-        Questa &egrave; la nostra missione!</a></p>
+        La tua Web Agency a Udine a Trieste!</a></p>
     </div>
   </div>
 
@@ -16,8 +16,8 @@ layout: home
     <div id="descrizione-home">
 
     <h2>SERVIZI WEB</h2>
-    <p>Progettazione Sito E-Commerce, Restyling Sito Web. Agenzia Web a Udine,
-      <a href="/servizi/realizzazione-siti-internet-creazione-siti-web-udine/" title="Realizzazione siti internet a Udine. Creazione siti web per le aziende di Udine.">Sito web al migliore prezzo di mercato</a></p>
+    <p>Progettazione Sito E-Commerce, Restyling Sito Web. Agenzia Web a Udine, a Trieste:
+      <a href="/servizi/realizzazione-siti-internet-creazione-siti-web-udine/" title="Realizzazione siti internet a Udine. Creazione siti web per le aziende di Trieste.">Sito web al migliore prezzo di mercato..</a></p>
 
     <h2>WEB MARKETING</h2>
     <p>Campagne AdWords, Facebook. Web Marketing. SEO.
