--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
     <div id="cdiv">
       <h1>SPIDERMAKE</h1>
       <h3>AGENZIA WEB A UDINE</h3>
-      <p>Realizza siti internet. Crea siti Web Aziendali. Sviluppa Siti Responsive.</p>
+      <p>Creazione e realizzazione siti internet. Web Agency Udine</p>
       <p><a href="/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/" title="About Web Agency Udine: Chi Siamo">
         La tua Web Agency a Udine a Trieste!</a></p>
     </div>
