VEDI PRECEDENTE COMMIT

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 ---
   <div id="bdiv">
     <div id="cdiv">
-      <h1>SPIDERMAKE</h1>
+      <h1>WEB AGENCY UDINE</h1>
       <h3>AGENZIA WEB A UDINE</h3>
       <p>Creazione e realizzazione siti internet. Web Agency Udine</p>
       <p><a href="/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/" title="About Web Agency Udine: Chi Siamo">
